# MIFUSGlobalSteelDecarb

./: .gitignore  LICENSE  README.md  pyproject.toml
ZIPs/C_ChinaSteelPolicyDeep01/: C_ChinaSteelPolicyDeep01.tex  main.tex
ZIPs/D_ClaudeIndia/: D_ClaudeIndia.tex
ZIPs/E_ClaudeJapan/: E_ClaudeJapan.tex
ZIPs/F_USASteelClaude/: F_USASteelClaude.tex  main.tex
ZIPs/I_Italy/: I_Italy.tex
ZIPs/J_EuropeanUnion/: main.tex
ZIPs/L_Turkey/: L_Turkey.tex
ZIPs/M_Brasil/: main.tex
ZIPs/N_Iran/: N_Iran.tex
ZIPs/O_Vietnam/: O_Vietnam.tex
scripts/: extract-zip-files.sh  move_pdf_files.sh  move_pdf_files_from_tex_to_pdf_folder.py  move_zip_files.sh  remove_auxiliary_tex_files.py
